# Particle-Filter

./: .gitignore  CMakeLists.txt  CmakeLists.txt  TODO  parse_nsys.py  particle_filter.cpp  particle_filter.cu  particle_filter_cpu.cu  pf.cpp  pf.py  profile.sh  profile_cpu.sh  profile_gpu.sh  readme.md
Helper/: CMakeLists.txt  robot.cpp  robot.cu  robot.cuh  robot.h  world.h
Profiling/: parallel.csv  parallel_manual.csv  parallel_manual_summary.csv  parallel_summary.csv  sequential.csv  sequential_summary.csv  summarize.py
Profiling/circle_sampling/: sequential_summary.csv
Profiling/systematic_sampling/: parallel_manual.csv  parallel_manual_summary.csv  sequential.csv  sequential_summary.csv
reports/: 128_1000000_run_1.txt  128_1000000_run_2.txt  128_1000000_run_3.txt  128_1000000_run_4.txt  128_1000000_run_5.txt  128_100000_run_1.txt  128_100000_run_2.txt  128_100000_run_3.txt  128_100000_run_4.txt  128_100000_run_5.txt  128_10000_run_1.txt  128_10000_run_2.txt  128_10000_run_3.txt  128_10000_run_4.txt  128_10000_run_5.txt  128_1000_run_1.txt  128_1000_run_2.txt  128_1000_run_3.txt  128_1000_run_4.txt  128_1000_run_5.txt  128_100_run_1.txt  128_100_run_2.txt  128_100_run_3.txt  128_100_run_4.txt  128_100_run_5.txt  128_500000_run_1.txt  128_500000_run_2.txt  128_500000_run_3.txt  128_500000_run_4.txt  128_500000_run_5.txt  128_50000_run_1.txt  128_50000_run_2.txt  128_50000_run_3.txt  128_50000_run_4.txt  128_50000_run_5.txt  128_5000_run_1.txt  128_5000_run_2.txt  128_5000_run_3.txt  128_5000_run_4.txt  128_5000_run_5.txt  (+410 more)
